<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LocationActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location_fields" />
    
   <LinearLayout
        android:id="@+id/longitudeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/longitudeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="5dip"
            android:text="@string/longitude" />

        <TextView
            android:id="@+id/longitudeText"
            android:text="@string/location_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
    </LinearLayout>

    <LinearLayout
        android:id="@+id/latitudeLayout"
        android:layout_marginTop="5dip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/latitudeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="5dip"
            android:text="@string/latitude" />

        <TextView
            android:id="@+id/latitudeText"
            android:text="@string/location_error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:text="@string/providers_title" />
    
    <RadioGroup
        android:id="@+id/locProvider"
        android:layout_marginTop="10dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
 
        <RadioButton
            android:id="@+id/prov_gps"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_gps" 
            android:checked="true" />
 
        <RadioButton
            android:id="@+id/prov_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_network" />
        
        <RadioButton
            android:id="@+id/prov_passive"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_passive" />
    </RadioGroup>
    
    <LinearLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <Button
	        android:id="@+id/locationBtn"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/location_btn" />
	    
	    <Button
	        android:id="@+id/enabledBtn"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/enabled_btn" />
	    
	    <Button
	        android:id="@+id/settingsBtn"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dip"
	        android:text="@string/settings_btn" />
    </LinearLayout>
</LinearLayout>
